<resources>
    <string name="app_name">Cosmic Cooperation Calculator</string>
    <string name="new_game_config_title">New Game Configuration</string>
    <string name="score_description_title">Description of Score</string>
    <string name="score_description_hint">Please enter your description of \nhow the score will be calculated per player</string>
    <string name="poor_score_hint">Poor Score</string>
    <string name="great_score_hint">Great Score</string>
    <string name="game_config_name_hint">Enter Name</string>
    <string name="expected_scores_title">Per Player Expected Score</string>
    <string name="all_games">All Games</string>
    <string name="new_game">New Game</string>
    <string name="empty_game_configs">To create a new game configuration,\nclick the plus sign here! --></string>
    <string name="empty_game_list">To create a new game,\nclick the plus sign here! --></string>
    <string name="save_game_config">This game configuration has been changed. Would you like to save the changes?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="no_changes">No changes to save. Press back arrow to exit.</string>
    <string name="back">Back</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="about">About</string>
    <string name="delete_game_config">Are you sure you would like to delete this game configuration and all associated games?</string>
    <string name="level_1">Super Suns</string>
    <string name="level_2">Marvelous Mercurians</string>
    <string name="level_3">Valiant Venusians</string>
    <string name="level_4">Excellent Earthlings</string>
    <string name="level_5">Middling Martians</string>
    <string name="level_6">Juvenile Jovians</string>
    <string name="level_7">Silly Saturnians</string>
    <string name="level_8">Unlucky Uranians</string>
    <string name="level_9">Notorius Neptunians</string>
    <string name="level_10">Puzzled Plutonians</string>
    <string name="_0">0</string>
    <string name="players">"Players: "</string>
    <string name="minimum_score_for">Minimum Score For</string>
    <string name="scrore_system_title">Scoring System</string>
    <string name="score_system_description">Please Enter Description of the Scores system</string>
    <string name="num_players_title">Number of Players</string>
    <string name="num_players_hint">Please enter the number of players</string>
    <string name="combined_score_hint">Please enter the combined score</string>
    <string name="combined_score_title">Combined Score</string>
    <string name="incomplete_game_prompt">Game missing fields. Please try again.</string>
    <string name="congratulations">Congratulations!</string>
    <string name="achievement">"You reached the rank "</string>
    <string name="ok">OK</string>
    <string name="score">"Score: "</string>
    <string name="difficulty_title">Game Difficulty Level </string>
    <string name="difficulty_prefix">"Difficulty Level: "</string>
    <string name="on_difficulty_lvl">" on Difficulty Level "</string>
    <string name="achievement_unlocked_text">Achievement Unlocked</string>
    <string name="achievement_name">You Have Achieved Rank </string>
    <string name="individual_score">Individual Score</string>
    <string name="enter_player1_score">Please enter the score of player1</string>
    <string name="add_player">Add player</string>
    <string name="player_1">Player 1</string>
    <string name="game_title">Game</string>
    <string name="player_and_space">"Player "</string>
    <string name="colon_and_space">":       "</string>
    <string name="space_and_points"> Points</string>
    <string name="cannot_add_more_players">Cannot add more players.</string>
    <string name="enter_player_score">Please enter the score of player</string>
    <string name="text_select_theme">Select Theme:</string>
    <string name="replay">Replay</string>
    <string name="acknowledgements">Acknowledgements</string>
    <string name="about_authors">About the Authors</string>
    <string name="authors">This app is developed by Jennifer Gu, Weipeng Yao, Thomas Reginold George and Chitransh Motwani of Group Calcium for CMPT 276 during the Fall 2022 semester under Dr. Brian Fraser.</string>
    <string name="about_course">About the course</string>
    <string name="course">CMPT 276 is being taught by Dr. Brian Fraser for Fall 2022. Find more information on: https://opencoursehub.cs.sfu.ca/bfraser/grav-cms/cmpt276/home</string>
    <string name="about_app">About the App</string>
    <string name="app">This Android app provides achievement goals to turn some competitive board games into a more co-operative experience. At the end of game, the combined score of all players is used to calculate a combined achievement level, with a higher total score earning a better achievement.</string>
    <string name="reference">Reference</string>
    <string name="reference1">1. The background image is downloaded from: https://www.freepik.com/free-photo/starry-night-sky_7061153.htm</string>
    <string name="reference2">2. The sounds used for animation have been downloaded from: https://mixkit.co/free-sound-effects/</string>
    <string name="reference3">3. The images for the pop-up have been downloaded from: https://www.freepik.com/free-photos-vectors/cartoon-background</string>
    <string name="capture">Capture Image</string>
    <string name="view_image_text">View Image</string>
    <string name="no_image_prompt">No Image has been Captured for the Current Game</string>
    <string name="saved">Saved</string>
    <string name="change_photo">Change Photo</string>
    <string name="enter_game_name_pls">Please enter the name of game.</string>
    <string name="take_a_photo">Take a photo</string>


    <string-array name="theme_array">
        <item>Default</item>
        <item>Dinosaur</item>
        <item>Pokemon</item>
        <item>Doraemon</item>
    </string-array>


</resources>