<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

        <item
            android:id="@+id/back_button"
            android:icon="@drawable/back_icon"
            app:showAsAction="always"
            android:title="@string/back"
            />

        <item
            android:id="@+id/save_button"
            android:icon="@drawable/save_icon"
            app:showAsAction="always"
            android:title="@string/save"
            />

        <item
            android:id="@+id/delete_button"
            android:icon="@drawable/ic_baseline_delete_24"
            app:showAsAction="always"
            android:title="@string/delete"
            />

        <item
            android:id="@+id/about_button"
            android:icon="@drawable/ic_baseline_about_24"
            app:showAsAction="always"
            android:title="@string/about"
            />

</menu>