<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/popup_layout"
    android:layout_width="400dp"
    android:layout_height="500dp"
    android:layout_gravity="center"
    android:background="@drawable/theme3bg">

    <ImageView
        android:id="@+id/achievement_star"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:src="@drawable/theme3im"/> />

    <TextView
        android:id="@+id/achievement_unlocked"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/achievement_star"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:text="@string/achievement_unlocked_text"
        android:textColor="@color/black"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/achievement_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/achievement_unlocked"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:gravity="center"
        android:text="@string/achievement_name"
        android:textColor="@color/black"
        android:textSize="26sp" />

    <Button
        android:id="@+id/popup_ok_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/achievement_name"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="274dp"
        android:text="@string/ok" />

    <Button
        android:id="@+id/replay_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/achievement_name"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="45dp"
        android:text="@string/replay" />

    <Spinner
        android:id="@+id/theme_spinner"
        android:layout_width="200dp"
        android:layout_height="35dp"
        android:layout_alignParentRight="true"
        android:layout_marginTop="420dp"
        android:layout_marginEnd="100dp"
        android:layout_marginRight="96dp"
        android:background="@color/white"
        android:entries="@array/theme_array"
        android:spinnerMode="dialog" />
</RelativeLayout>